<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="414dp"
        android:layout_height="137dp"
        android:background="@color/black"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="#FBE9E7"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="394dp"
        android:layout_height="445dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.64">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn16"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="setOnResult"
                android:text="@string/f_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnLn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/ln"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRaiz"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/raiz_x"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnExp"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/x_y"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDel"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:text="@string/ac"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/p7s"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPerc"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/perc"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDiv"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:text="@string/_7"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMult"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSub"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/_2"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPlus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="getOperation"
                android:rotation="0"
                android:text="@string/plus"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnPoint"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:onClick="setOnResult"
                android:rotation="0"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPlus2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:rotation="0"
                android:text="@string/dontknow"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="@drawable/round_button_operation"
                android:onClick="calculate"
                android:rotation="0"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>